--- a/src/app/components/tabela-solicitantes/tabela-solicitantes.component.html
+++ b/src/app/components/tabela-solicitantes/tabela-solicitantes.component.html
@@ -1,50 +1,20 @@
-
-<app-search-bar></app-search-bar>
-
-<div>
-
-<h3 class="mtop mleft">Solicitaçãoes Pendentes</h3>
-
-<table class="table table-striped mt-2">
-    <thead>
-      <tr>
-        <th scope="col">Numero Protocólo</th>
-        <th scope="col">Nome</th>
-        <th scope="col">Data da envio</th>
-        <th scope="col">Documentação</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>
-            <a type="button" href="documento-solicitantes" class=" mleft2 btn-transparent " data-bs-toggle="modal" data-bs-target="#exampleModal">
-                <img class="timg" src="../img/docsBtn.png"/>
-              </a>
-        </td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>
-          <a type="button" href="documento-solicitantes" class=" mleft2 btn-transparent " data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <img class="timg" src="../img/docsBtn.png"/>
-          </a>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>
-          <a type="button" href="documento-solicitantes" class=" mleft2 btn-transparent " data-bs-toggle="modal" data-bs-target="#exampleModal">
-            <img class="timg" src="../img/docsBtn.png"/>
-          </a>
-        </td>
-      </tr>
-    </tbody>
-  </table>
-
-</div>
+<table class="table">
+  <thead>
+    <tr>
+      <th>Nome</th>
+      <th>Protocolo</th>
+      <th>Data de Envio</th>
+      <th>Ações</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr *ngFor="let documento of documentos">
+      <td>{{ documento.nome }}</td>
+      <td>{{ documento.numeroProtocolo }}</td>
+      <td>{{ documento.dataEnvio | date: 'short' }}</td>
+      <td>
+        <button class="btn btn-primary" (click)="visualizarDocumento(documento.id)">Visualizar</button>
+      </td>
+    </tr>
+  </tbody>
+</table>
