--- a/src/app/layouts/tabela-solicitantes/tabela-solicitantes.component.html
+++ b/src/app/layouts/tabela-solicitantes/tabela-solicitantes.component.html
@@ -1,6 +1,6 @@
 <div>
   <h3 class="mtop mleft">Solicitações Pendentes</h3>
-  
+
   <!-- Barra de pesquisa (logo abaixo do título) -->
   <app-search-bar (search)="onSearch($event)"></app-search-bar> <!-- Aqui você faz o binding do evento para chamar a função onSearch -->
 
@@ -17,7 +17,7 @@
       <tr *ngFor="let protocol of filteredProtocols">
         <td>{{ protocol.user.name }}</td>
         <td>{{ protocol.id }}</td>
-        <td>{{ formatDate(protocol.createdAt) }}</td>
+        <td>{{ formatDate(protocol.created_at) }}</td>
         <td>
           <button class="btn btn-primary" (click)="handleProtocol(protocol)">
             Detalhes
