--- a/src/app/layouts/register/register.component.html
+++ b/src/app/layouts/register/register.component.html
@@ -67,7 +67,7 @@
             <button
               type="submit"
               class="btn btn-primary"
-              [disabled]="registerForm.invalid"
+              [disabled]="false"
             >
               Cadastrar
             </button>
