--- a/src/app/layouts/tabela-solicitantes/tabela-solicitantes.component.html
+++ b/src/app/layouts/tabela-solicitantes/tabela-solicitantes.component.html
@@ -1,8 +1,10 @@
 <div>
-  <h3 class="mtop mleft">Solicitações Pendentes</h3>
 
-  <!-- Barra de pesquisa (logo abaixo do título) -->
-  <!-- <app-search-bar (search)="onSearch($event)"></app-search-bar>      IMPLEMENTACAO POSTERIOR   -->
+  <div style="justify-content: center; margin-left: 622px;">
+  <h3 class="mtop mleft">Solicitações Pendentes</h3>
+  </div>
+
+  <app-search-bar (search)="onSearch($event)"></app-search-bar>   
 
   <table class="table table-striped mt-2">
     <thead>
@@ -10,7 +12,7 @@
         <th scope="col">Nome do Solicitante</th>
         <th scope="col">Protocolo</th>
         <th scope="col">Data de Envio</th>
-        <th scope="col">Ações</th>
+        <th scope="col">Documentos</th>
       </tr>
     </thead>
     <tbody>
