--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,22 +2,29 @@
   <div class="container-fluid">
     <!-- Imagem do logo -->
     <a class="navbar-brand" href="#">
-      <img src="/img/logo.png" alt="Logo" class="logo_header"/>
+      <img src="/img/logo.png" alt="Logo" class="logo_header" />
     </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <button
+      class="navbar-toggler"
+      type="button"
+      data-bs-toggle="collapse"
+      data-bs-target="#navbarNav"
+      aria-controls="navbarNav"
+      aria-expanded="false"
+      aria-label="Toggle navigation"
+    >
       <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="collapse navbar-collapse d-flex justify-content-around" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item ">
+        <li class="nav-item">
           <a class="nav-link opcao" aria-current="page" href="#">Inicio</a>
         </li>
-        <li class="nav-item ">
+        <li class="nav-item">
           <a class="nav-link opcao" href="/contatos">Contato</a>
         </li>
-        <li *ngIf="userLogged == true" class="nav-item ">
-          <!-- Link para abrir o PDF -->
+        <li *ngIf="userLogged" class="nav-item">
           <a class="nav-link opcao" href="/send-form">Documentos</a>
         </li>
         <li class="nav-item">
@@ -25,13 +32,23 @@
         </li>
       </ul>
     </div>
-    <a *ngIf="!userLogged" href="/sign-in" type="button" class="btn btn-primary botao d-flex flex-row">Entrar
-      <img src="/img/entar.png" alt="Logo" class="entrar"/>
+
+    <!-- Botões de autenticação -->
+    <a *ngIf="!userLogged" href="/sign-in" class="btn btn-primary botao d-flex flex-row">
+      Entrar
+      <img src="/img/entar.png" alt="Logo" class="entrar" />
     </a>
-    <a *ngIf="!userLogged" href="/sign-up" type="button" class="register btn btn-primary botao d-flex flex-row">Cadastrar
-      <img src="/img/entar.png" alt="Logo" class="entrar"/>
+    <a *ngIf="!userLogged" href="/sign-up" class="register btn btn-primary botao d-flex flex-row">
+      Cadastrar
+      <img src="/img/entar.png" alt="Logo" class="entrar" />
     </a>
-    <span *ngIf="userLogged == true" class="user btn btn-primary botao d-flex flex-row">{{user}}
-    </span>
+
+    <div class="botoes">
+    <!-- Botão de logout -->
+    <button *ngIf="userLogged" class="btn btn-danger botao logout" (click)="onLogout()">Logout</button>
+
+    <!-- Nome do usuário logado -->
+    <span *ngIf="userLogged" class="user btn btn-primary botao d-flex flex-row">{{ user }}</span>
+  </div>
   </div>
 </nav>
