--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -28,11 +28,25 @@ nav{
 }
 
 .user {
-  width: 8%;
-  text-align: center;
-  display: flex;
-  justify-content: center;
+  width: 45%;
+  margin-right: 15px;
+}
+
+.logout{
+    margin-right: 30px;
+    width: 45%;
 }
 .register {
-  margin: 10px
+  margin: 10px;
+  width: 130px;
+
+}
+
+.botoes{
+    display: flex;
+    flex-direction: row-reverse;
+}
+
+.ajust.header{
+    margin-left: 25px;
 }
